# RobinPlayer

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/robining/robinplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  native-lib.cpp  player.cpp  pusher.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/player/: Constants.h  IPlayer.cpp  IPlayer.h  RobinPlayer.cpp  RobinPlayer.h
app/src/main/cpp/player/bridge/: JavaBridge.cpp  JavaBridge.h
app/src/main/cpp/player/decoders/: AudioStreamDecoder.cpp  AudioStreamDecoder.h  IStreamDecoder.cpp  IStreamDecoder.h  SyncHandler.cpp  SyncHandler.h  VideoStreamDecoder.cpp  VideoStreamDecoder.h
app/src/main/cpp/pusher/: BlockedQueue.h  RobinPusher.cpp  RobinPusher.h
app/src/main/cpp/rtmp/: BlockedQueue.cpp  BlockedQueue.h  RobinPusher.cpp  RobinPusher.h
app/src/main/java/com/robining/robinplayer/: Enums.kt  INativeBridge.kt  IPlayer.kt  MainActivity.kt  MimeMappingUtil.kt  PLAYER_STATE.java  RPlayerRender.kt  RobinPlayer.kt  WlShaderUtil.kt
app/src/main/java/com/robining/robinplayer/base/: BaseActivity.kt  IPermissionRequestCallback.kt  PermissionRequestCallback.kt
app/src/main/java/com/robining/robinplayer/camera/: Camera2Activity.kt  CameraActivity.kt  CameraGLSurfaceView.java  CameraHelper.kt  CameraRender.kt  CameraSurfaceView.kt  CameraUtil.kt  DestroyableGLRender.kt  DirectDrawer.java  GlesUtil.kt  MultiRender.kt  MultiSharedRender.kt  OesTextureRender.kt  RGLSurfaceView.kt  TextureRender.kt  WithTextureRender.kt
app/src/main/java/com/robining/robinplayer/camera1/: BackgroundRender.kt  CameraRender.kt  CameraUtil.kt  EglContextHelper.kt  FboRender.kt  GLThread.kt  GlesUtil.kt  PictureRender.kt  RGLRender.kt  RGLSurfaceView.kt  RenderMode.kt  SharedRender.kt  SurfaceTextureRender.kt
app/src/main/java/com/robining/robinplayer/exceptions/: PlayerExceptions.kt
app/src/main/java/com/robining/robinplayer/opengl/: EglActivity.kt  EglContextHelper.kt
app/src/main/java/com/robining/robinplayer/player/: Enums.kt  INativeBridge.kt  IPlayer.kt  IPusher.kt  MimeMappingUtil.kt  PlayerActivity.kt  RPlayerRender.kt  RobinPlayer.kt  WlShaderUtil.kt
app/src/main/java/com/robining/robinplayer/pusher/: ADTSUtil.kt  H264SPSPaser.java  IPusher.kt  LoopThread.kt  PusherActivity.kt  RobinAudioEncoder.kt  RobinAudioRecorder.kt  RobinBaseEncoder.kt  RobinBaseMediaEncoder.kt  RobinPusher.kt  RobinVideoEncoder.kt
app/src/main/res/layout/: activity_camera.xml  activity_camera2.xml  activity_egl.xml  activity_main.xml  activity_player.xml  activity_pusher.xml
app/src/main/res/raw/: fragment_texture2d_shader.glsl  gl_oes_fragment_shader.glsl  gl_samper2d_fragment_shader.glsl  gl_vertex_matrix2_shader.glsl  gl_vertex_matrix_shader.glsl  gl_vertext_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/robining/robinplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
